--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,9 @@
 vssver2.scc
 *.vssscc
 *.Admin-VAIO.Fernan
+\fat32lib\deleted\*.*
+\fat32lib\debug\*.*
+\smlib\debug\*.*
+*.mcs
+\debug\*.*
+*.scc
