--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,10 @@
 *.app
 *.hex
 
-\doc\compile.bat
-\doc\fat32lib.doxy.txt
-\doc\pages\*.*
-\doc\doxygen_preprocessor.exe
+doc\compile.bat
+doc\fat32lib.doxy.txt
+doc\pages\*.*
+doc\doxygen_preprocessor.exe
 vssver2.scc
 *.vssscc
 *.Admin-VAIO.Fernan
