--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ doc/layout.xml
 ramdrv/debug/*.*
 smlib/debug/*.*
 win32io/debug/*.*
+win32test/debug/*.*
 vssver2.scc
 *.vssscc
 *.Admin-VAIO.Fernan
