Rewrote SPI driver/fixed issues with SD card initialization

--- a/ramdrvlib/ramdrvlib.vcproj
+++ b/ramdrvlib/ramdrvlib.vcproj
@@ -181,6 +181,10 @@
 			RelativePath="..\licensing.txt"
 			>
 		</File>
+		<File
+			RelativePath=".\readme.txt"
+			>
+		</File>
 	</Files>
 	<Globals>
 	</Globals>
